$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-10 (opened August 20, 2010)

	* New version opened with the release of vegan_1.17-4 on August
	20, 2010.

	* deviance.cca/rda: return 0 (instead of NULL) if there is no
	residual variation.

	* vegdist: help page gives equations for binary variants of the
	indices. 

	* biplot.CCorA: resets par that it sets.

	* permutest.cca: defaults to 99 permutations instead of 100 (to
	be consistent). Item 'call' now stores the call to permutest()
	instead of the call of the ordination which is now saved in
	'testcall'.  This means that update() works now.

	* anova.cca: use correct degrees of freedom when there is no
	constrained or no residual component.

	* anova.ccalist: Started to work on the concept of permutation
	test comparison of several cca/ rda/ capscale models. The basic
	function was added to the R-Forge (undocumented!).  First idea is
	to run permutest.cca with the same RNG seed and collect the
	permutations from the differences of these models.  This won't be
	consistent with other anova.cca* because permuted residuals differ
	from the corresponding partial model (except with model =
	"direct").  Another option that I have on my mind is that I use
	model.matrix.cca to reconstruct a matrix of RHS of each model, and
	then run a series partial model ANOVAs. Here the problem is that
	the statistics will be sequential, i.e., the residual of each
	model is from the next model and not from the final model, and the
	models must be in increasing order or ordered programmatically;
	the current test will study differences of any sequence.
	Naturally, we have to figure out how the permutation should be
	done. Probably a note to R-Devel to open up discussion on the
	issue. NOTE: there is no automatic delegation to this function. If
	you try this, you must explcititly write "anova.ccalist(model1,
	model2, model3). NOTE2: There are no tests of the sanity of the